# mcp-electronicmarkets-tr

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: main.py  models.py
app/scrapers/: base.py  direnc.py  robo90.py  robocombo.py  robotistan.py
