[project]
name = "mcp-electronicmarkets-tr"
version = "0.1.0"
description = "An MCP server for tracking electronics prices and stock across Turkish markets."
authors = [
    { name = "İsmail Enes Küçük", email = "ismaileneskucuk@gmail.com" }
]
dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"