[project]
name = "mcp-electronicmarkets-tr"
version = "1.0.0"
description = "An MCP server for tracking electronics prices and stock across Turkish markets."
authors = [
    { name = "İsmail Enes Küçük", email = "ismaileneskucuk@gmail.com" }
]
dependencies = [
    "fastmcp",
    "httpx",
    "beautifulsoup4",
    "pydantic"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]